# Pydantic-SocketIO

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: test.yml
src/pydantic_socketio/: __init__.py  fastapi_socketio.py  pydantic_socketio.py
src/pydantic_socketio/asyncapi/: models.py
tests/: test_asyncapi.py  test_client.py  test_server.py
