[project]
name = "pydantic-socketio"
version = "0.1.0"
description = "Pydantic enhanced socketio with type validation. Also support FastAPI integration."
readme = "README.md"
authors = [
    { name = "Atomie CHEN", email = "atomic_cwh@163.com" }
]
requires-python = ">=3.8"
keywords = ["pydantic", "socketio", "fastapi"]
dependencies = [
    "pydantic>=2.10.6",
    "python-socketio>=5.12.1",
]

[project.urls]
homepage = "https://github.com/atomiechen/Pydantic-SocketIO"
issues = "https://github.com/atomiechen/Pydantic-SocketIO/issues"
changelog = "https://github.com/atomiechen/Pydantic-SocketIO/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "eventlet>=0.39.1",
    "python-socketio[client]>=5.12.1",
    "ruff>=0.11.0",
]
